<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_linear_layout_padding"
    android:background="@color/turquoise"
    android:gravity="center"
    android:id="@+id/ll">

    <LinearLayout
        android:id="@+id/main_linearlayout"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/arnote"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="@dimen/main_cardview_width"
            android:layout_height="@dimen/main_cardview_height"
            android:layout_margin="@dimen/main_main_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/arnote_main_imageview"
                    android:layout_width="@dimen/main_imageview_width"
                    android:layout_height="@dimen/main_imageview_heigth"
                    android:background="@drawable/cerclebackgroundpurple"
                    android:src="@drawable/arnote_logo_launcher_200x200"
                    android:padding="@dimen/main_linear_layout_padding"/>

                <TextView
                    android:id="@+id/ar_note_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/main_main_margin"
                    android:text="@string/ar_note_menu_Text"/>

                <View
                    android:id="@+id/ar_note_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_view_heigth"
                    android:background="@color/lightgray"
                    android:layout_margin="@dimen/main_main_margin"/>

                <TextView
                    android:id="@+id/ar_note_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/arnote_menu_desc"
                    android:padding="@dimen/arnote_desc_padding"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mynotes"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="@dimen/main_cardview_width"
            android:layout_height="@dimen/main_cardview_height"
            android:layout_margin="@dimen/main_main_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/mynotes_main_imageview"
                    android:layout_width="@dimen/main_imageview_width"
                    android:layout_height="@dimen/main_imageview_heigth"
                    android:background="@drawable/cerclebackgroundpink"
                    android:src="@drawable/baseline_info_black_48"
                    android:padding="@dimen/main_linear_layout_padding"/>

                <TextView
                    android:id="@+id/mynotes_main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/main_main_margin"
                    android:text="@string/main_mynotes_text"/>

                <View
                    android:id="@+id/mynotes_main_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_view_heigth"
                    android:background="@color/lightgray"
                    android:layout_margin="@dimen/main_main_margin"/>

                <TextView
                    android:id="@+id/mynotes_main_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/main_mynotes_desc"
                    android:padding="@dimen/arnote_desc_padding"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/settings"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="@dimen/main_cardview_width"
            android:layout_height="@dimen/main_cardview_height"
            android:layout_margin="@dimen/main_main_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/settings_main_imageview"
                    android:layout_width="@dimen/main_imageview_width"
                    android:layout_height="@dimen/main_imageview_heigth"
                    android:background="@drawable/cerclebackgroundgreen"
                    android:src="@drawable/outline_settings_black_48"
                    android:padding="@dimen/main_linear_layout_padding"/>

                <TextView
                    android:id="@+id/settings_main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/main_main_margin"
                    android:text="@string/main_settings_text"/>
                <View
                    android:id="@+id/settings_main_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_view_heigth"
                    android:background="@color/lightgray"
                    android:layout_margin="@dimen/main_main_margin"/>
                <TextView
                    android:id="@+id/settings_main_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/main_settings_desc"
                    android:padding="@dimen/arnote_desc_padding"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/logout"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="@dimen/main_cardview_width"
            android:layout_height="@dimen/main_cardview_height"
            android:layout_margin="@dimen/main_main_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logout_main_imageview"
                    android:layout_width="@dimen/main_imageview_width"
                    android:layout_height="@dimen/main_imageview_heigth"
                    android:background="@drawable/cerclebackgroundyello"
                    android:src="@drawable/outline_power_settings_new_black_48"
                    android:padding="@dimen/main_linear_layout_padding"/>

                <TextView
                    android:id="@+id/logout_main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_main_margin"
                    android:text="@string/main_logout_text"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/logout_main_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_view_heigth"
                    android:background="@color/lightgray"
                    android:layout_margin="@dimen/main_main_margin"/>

                <TextView
                    android:id="@+id/logout_main_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/arnote_desc_padding"
                    android:text="@string/main_logout_desc"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
