<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="arNoteModel"
            type="com.thesis.project.models.arnote.ArNote" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recycler_item_arnote_model_relative_layout_margin"
        android:layout_marginBottom="@dimen/recycler_item_arnote_model_relative_lyout_margin_bottom">

        <androidx.cardview.widget.CardView
            android:id="@+id/recycler_cardview"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/recycler_item_arnote_model_cardview_margin"
            android:elevation="@dimen/recycler_item_arnote_model_cardview_elevation"
            card_view:cardCornerRadius="@dimen/recycler_item_arnote_model_cardview_corner_radius">
            <GridLayout
                android:id="@+id/recycleritemlyricsmodelgridlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="6"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/title_shortcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/recycler_item_arnote_model_textview_padding_start"
                    android:paddingEnd="@dimen/recycler_item_arnote_model_textview_padding_end"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/recycler_item_arnote_model_title_shortcode_text"
                    android:textSize="@dimen/recycler_item_arnote_model_textview_textsize"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>


                <TextView
                    android:id="@+id/shortcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:paddingStart="@dimen/recycler_item_arnote_model_textview_padding_start"
                    android:paddingEnd="@dimen/recycler_item_arnote_model_textview_padding_end"
                    android:text="@{arNoteModel.shortcode}"
                    android:textSize="@dimen/recycler_item_arnote_model_textview_textsize"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/title_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/recycler_item_arnote_model_textview_padding_start"
                    android:paddingEnd="@dimen/recycler_item_arnote_model_textview_padding_end"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/recycler_item_arnote_model_title_type_text"
                    android:textSize="@dimen/recycler_item_arnote_model_textview_textsize"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/recycler_item_arnote_model_textview_padding_start"
                    android:paddingEnd="@dimen/recycler_item_arnote_model_textview_padding_end"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@{arNoteModel.type}"
                    android:textSize="@dimen/recycler_item_arnote_model_textview_textsize"
                    android:textColor="@color/white"/>


                <TextView
                    android:id="@+id/title_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/recycler_item_arnote_model_textview_padding_start"
                    android:paddingEnd="@dimen/recycler_item_arnote_model_textview_padding_end"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="@string/recycler_item_arnote_model_title_date_text"
                    android:textSize="@dimen/recycler_item_arnote_model_textview_textsize"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:paddingStart="@dimen/recycler_item_arnote_model_textview_padding_start"
                    android:paddingEnd="@dimen/recycler_item_arnote_model_textview_padding_end"
                    android:text="@{arNoteModel.date}"
                    android:textSize="@dimen/recycler_item_arnote_model_textview_textsize"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/recycler_item_arnote_model_textview_padding_start"
                    android:paddingEnd="@dimen/recycler_item_arnote_model_textview_padding_end"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:text="@string/recycler_item_arnote_model_title_text_text"
                    android:textSize="@dimen/recycler_item_arnote_model_textview_textsize"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/lizfi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:paddingStart="@dimen/recycler_item_arnote_model_textview_padding_start"
                    android:paddingEnd="@dimen/recycler_item_arnote_model_textview_padding_end"
                    android:text="@{arNoteModel.text}"
                    android:textSize="@dimen/recycler_item_arnote_model_textview_textsize"
                    android:textColor="@color/white" />


            </GridLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>